# qbScripts

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Project Plan_ qBittorrent Peer-IP Clustering & ProtonVPN Server Recommender.md  README.md  main.py  pyproject.toml  requirements.txt
docs/: API.md  IMPLEMENTATION_STATUS.md  USAGE.md  example.py
docs/assets/: demo.cast
src/qb_peer_vpn/: __init__.py  cli.py  cluster_analyzer.py  geolocator.py  map_visualizer.py  peer_fetcher.py  ui.py  vpn_data.py
tests/: conftest.py  test_cluster_analyzer.py  test_geolocator.py  test_map_visualizer.py  test_peer_fetcher.py  test_ui.py  test_vpn_data.py
